* 0.4
- Fixed a problem with unowned files. (Alain Rykaert)
- Added cups, ltsp, nscd and smbldap config. (Alain Rykaert)

* 0.3
- Added lots of extra sections (more additions welcome !)
- Filtered out iptables and netstat counters
- Implemented mail feature (when differences or when initial use)
- Implemented inline diff function
- Allow to write to different output file or stdout
- Add cron= config option to add to cron (hourly, daily, weekly or monthly)
- Add include= config option to include custom configfiles (eg. /etc/dconf-custom.conf)
- Added gzip and bzip2 support
- Added cleanup hook to remove unfinished logfiles when interrupted
- Initial public release

* 0.2
- Basic version with mailing support