@@ -13,8 +13,9 @@ logdir = $(localstatedir)/log/dconf
 all: install
 
 install:
-	-[ ! -f $(DESTDIR)$(sysconfdir)/dconf.conf ] && install -D -m0644 dconf.conf $(DESTDIR)$(sysconfdir)/dconf.conf
-	-[ ! -f $(DESTDIR)$(sysconfdir)/dconf-custom.conf ] && install -D -m0644 dconf-custom.conf $(DESTDIR)$(sysconfdir)/dconf-custom.conf
+#	-[ ! -f $(DESTDIR)$(sysconfdir)/dconf.conf ] && install -D -m0644 dconf.conf $(DESTDIR)$(sysconfdir)/dconf.conf
+	install -D -m0644 dconf.conf $(DESTDIR)$(sysconfdir)/dconf.conf
+	-@[ ! -f $(DESTDIR)$(sysconfdir)/dconf-custom.conf ] && install -D -m0644 dconf-custom.conf $(DESTDIR)$(sysconfdir)/dconf-custom.conf
 	install -D -m0755 dconf $(DESTDIR)$(bindir)/dconf
 
 	install -d -m0755 $(DESTDIR)$(logdir)
