@@ -31,11 +31,8 @@ files =
 
 [filesystems]
 cmds =
-	exportfs
 	fdisk -l 2>/dev/null
 	mount
-	showmount -d
-	showmount -e
 files =
 	/etc/exports
 	/etc/fstab
@@ -97,7 +94,7 @@ files =
 	/proc/net/bonding/bond0
 
 [packages]
-cmds =	rpm -qa | sort
+cmds =	rpm -qa | sort -f
 
 [printer]
 files =
@@ -162,6 +159,7 @@ cmds =
 	dmidecode
 	lspci -v
 	lsusb -vv
+#	for i in /dev/hd[a-z] /dev/sd[a-z]; do smartctl -a $i; done
 files =
 	/etc/modprobe.conf
 	/etc/modules.conf
@@ -371,6 +369,14 @@ files =
 	/etc/httpd/conf.d/nagios
 	/etc/nagios/*.cfg
 
+[nfs]
+cmds =
+	exportfs
+	showmount -d
+	showmount -e
+files =
+	/etc/exports
+
 [nscd]
 files =	/etc/nscd.conf
 
@@ -477,7 +483,13 @@ cmds =
 	lsrpdomain
 	lsrpnode
 	lssrc -a
-
+files =
+	/var/ct/cfg/clusters
+	/var/ct/cfg/ct_node_id
+	/var/ct/cfg/ctsec.nodeinfo
+	/var/ct/cfg/ctrmc.acls
+	/var/ct/cfg/current_cluster
+	
 [rsync]
 files =	/etc/rsyncd.conf
 
